# clara

./: .gitignore  .prettierrc.toml  Makefile  README.md  package-lock.json  package.json  svelte.config.js  turbo.json
apps/desktop/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
apps/desktop/src/: global.css
docs/: internal_plugins.md  plugins.md
scripts/: clean.sh  generate_plugin_bridge.ts  install.ts  install_plugins.ts  tsconfig.json
src/: app.html  global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  project.rs
src-tauri/windows/: hooks.nsi
src/api/: Data.svelte  components.ts  data.ts  errors.svelte.ts  frameworks.ts  graph.ts  icons.svelte.ts  project.svelte.ts  suggestions.ts  tree.ts  views.ts
src/api/data/: action.svelte.ts  attribute.svelte.ts  database.svelte.ts  dataset.svelte.ts  dataset.ts  datetime.svelte.ts  measurement.svelte.ts  measurement.ts  tree.svelte.ts  tree.ts
src/api/math/: arrays.svelte.ts  matrix.svelte.ts  shape.svelte.ts
src/api/util/: log.ts  (+3 more)
src/components/: ContextMenu.svelte  Navbar.svelte  NoProject.svelte  Pane.svelte  Popup.svelte  StatusBar.svelte
src/routes/: +layout.svelte  +page.svelte
test/testproj/: README.md  package.json
test/testprojnonin/: README.md  package.json
tools/clara-api/: Cargo.toml
tools/clara-cli/: Cargo.toml
tools/clara-cli/src/: icons.rs  main.rs  package.rs
tools/clara-cli/src/templates/plugin/: index.ts  install_script.js  install_script.ts  svelte.config.js  vite.config.ts
(+240 files in other folders)
